# jean-yves

./: README.md
src/: CMakeLists.txt  inputLayer.cpp  inputLayer.h  layer.cpp  layer.h  main.cpp  matrix.h  matrixOperationException.cpp  matrixOperationException.h  matrixVector.h
